*** empty log message ***

--- a/utils/tests/Makefile
+++ b/utils/tests/Makefile
@@ -1,3 +1,6 @@
-CPPFLAGS = -O1 -I..
-LDFLAGS = -ltiff -ljpeg
-all: google_test rnd_speed
+CPPFLAGS = -O1 -I.. `pkg-config --cflags gdkmm-2.4`
+LDFLAGS = -ltiff -ljpeg `pkg-config --libs gdkmm-2.4`
+all: google_test rnd_speed image2pixbuf
+
+
+
