*** empty log message ***

--- a/geo_io/Makefile
+++ b/geo_io/Makefile
@@ -1,5 +1,7 @@
-io.a: io.o io_gu.o io_oe.o io_gps.o io_xml.o geo_enums.o
-	ar r io.a *.o
+OFILES = io.o io_gu.o io_oe.o io_gps.o io_xml.o geo_enums.o
+
+io.a: $(OFILES)
+	ar rs io.a $(OFILES)
 
 clean:
 	rm *.o
