--- a/programs/Makefile
+++ b/programs/Makefile
@@ -23,11 +23,14 @@ all: mapsoft_convert mapsoft_googleview1 mapsoft_imgview mapsoft_imgview1 mapsof
 clean:
 	rm mapsoft_googleview mapsoft_imgview mapsoft_imgview1 mapsoft_convert *.o
 
-MAPSOFT_LIBS = ../geo_io/io.a ../utils/mapsoft_utils.a ../jeeps/jeeps.a ../loaders/loaders.a -lusb 
+MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a ../jeeps/jeeps.a 
+
+alllibs.a: $(MAPSOFT_LIBS)
+	ar rs alllibs.a $(MAPSOFT_LIBS)
 
 
-mapsoft_convert: $(MAPSOFT_LIBS) mapsoft_convert.o
-	g++ mapsoft_convert.o $(MAPSOFT_LIBS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
+mapsoft_convert: $(MAPSOFT_LIBS) mapsoft_convert.o alllibs.a
+	g++ mapsoft_convert.o alllibs.a $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
 
 mapsoft_mkmap: $(MAPSOFT_LIBS) mapsoft_mkmap.o
 	g++ mapsoft_mkmap.o $(MAPSOFT_LIBS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
