--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,5 +1,7 @@
-mapsoft_utils.a: mapsoft_geo.o mapsoft_options.o mapsoft_time.o mapsoft_convs.o rect.o
-	ar rs $@ *.o
+OFILES = mapsoft_geo.o mapsoft_options.o mapsoft_time.o mapsoft_convs.o
+
+mapsoft_utils.a: $(OFILES)
+	ar rs $@ $(OFILES)
 
 clean:
 	rm *.o
