*** empty log message ***

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,10 +1,9 @@
-OFILES = mapsoft_geo.o mapsoft_options.o mapsoft_time.o mapsoft_convs.o
+OFILES = mapsoft_time.o mapsoft_convs.o rect.o
 
-all: mapsoft_utils.a rect.o
+all: mapsoft_utils.a 
 
 mapsoft_utils.a: $(OFILES)
 	ar rs $@ $(OFILES)
-
 
 clean:
 	rm *.o
