--- a/vector/Makefile
+++ b/vector/Makefile
@@ -1,2 +1,6 @@
+all: test_fig test_mp
 test_fig: fig.o test_fig.cpp
 	g++ fig.o test_fig.cpp -o test_fig
+test_mp: mp.o test_mp.cpp
+	g++ mp.o test_mp.cpp -o test_mp
+
