*** empty log message ***

--- a/vector/Makefile
+++ b/vector/Makefile
@@ -1,6 +1,15 @@
-all: test_fig test_mp
+GRLIB_FLAGS = -ljpeg -ltiff -lpng
+USB_FLAGS = -lusb
+MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a  ../jeeps/jeeps.a
+CPPFLAGS = -O1
+
+all: test_fig test_mp test_geofig
 test_fig: fig.o test_fig.cpp
 	g++ fig.o test_fig.cpp -o test_fig
 test_mp: mp.o test_mp.cpp
 	g++ mp.o test_mp.cpp -o test_mp
+
+
+test_geofig: $(MAPSOFT_LIBS) geofig.o fig.o test_geofig.cpp 
+	g++ geofig.o fig.o test_geofig.cpp $(GRLIB_FLAGS) $(MAPSOFT_LIBS) -o test_geofig
 
