--- a/vector/Makefile
+++ b/vector/Makefile
@@ -3,12 +3,16 @@ USB_FLAGS = -lusb
 MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a  ../jeeps/jeeps.a
 CPPFLAGS = -O1
 
-all: test_fig test_mp test_geofig mp2fig fig2mp
+all: test_fig test_mp test_geofig mp2fig fig2mp fig_conv
 
 test_fig: fig.o test_fig.cpp
 	g++ fig.o test_fig.cpp -o test_fig
 test_mp: mp.o test_mp.cpp
 	g++ mp.o test_mp.cpp -o test_mp
+
+
+fig_conv: fig.o fig_conv.cpp
+	g++ -g fig.o fig_conv.cpp -o fig_conv
 
 
 test_geofig: $(MAPSOFT_LIBS) geofig.o fig.o test_geofig.cpp 
