--- a/vector/Makefile
+++ b/vector/Makefile
@@ -3,7 +3,7 @@ USB_FLAGS = -lusb
 MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a  ../jeeps/jeeps.a
 CPPFLAGS = -O1
 
-all: test_fig test_mp test_geofig mp2fig fig2mp fig_conv
+all: test_fig test_mp test_geofig mp2fig fig2mp fig_conv fig_norm
 
 test_fig: fig.o test_fig.cpp
 	g++ fig.o test_fig.cpp -o test_fig
@@ -13,6 +13,9 @@ test_mp: mp.o test_mp.cpp
 
 fig_conv: fig.o fig_conv.cpp
 	g++ -g fig.o fig_conv.cpp -o fig_conv
+
+fig_norm: fig.o fig_norm.cpp
+	g++ -g fig.o fig_norm.cpp -o fig_norm
 
 
 test_geofig: $(MAPSOFT_LIBS) geofig.o fig.o test_geofig.cpp 
