--- a/vector/znaki/Makefile
+++ b/vector/znaki/Makefile
@@ -1,8 +1,10 @@
-png: zn.png zn1.png
+png: zn.png zn1.png samp.fig samp1.fig
 mp: zn.mp velja.mp bunch.mp isma.mp volg.mp kubr.mp semisl.mp
 
 zn1.fig: zn.fig
 	../fig_conv zn.fig zn1.fig
+samp1.fig: samp.fig
+	../fig_conv samp.fig samp1.fig
 
 %.png: %.fig
 	fig2dev  -L png -m 3.75 $< > $@
