--- a/geo_io/Makefile
+++ b/geo_io/Makefile
@@ -1,4 +1,4 @@
-OFILES = io.o io_gu.o io_oe.o io_gps.o io_xml.o geo_enums.o filters.o geo_convs.o o_fig.o o_fig.o o_htm.o
+OFILES = io.o io_gu.o io_oe.o io_gps.o io_xml.o geo_enums.o filters.o geo_convs.o o_fig.o o_fig.o o_htm.o fig.o mp.o geofig.o
 
 io.a: $(OFILES)
 	ar rs io.a $(OFILES)
