*** empty log message ***

--- a/programs/Makefile
+++ b/programs/Makefile
@@ -19,33 +19,36 @@ CPPFLAGS = `pkg-config --cflags libcurl` `pkg-config --cflags gtkmm-2.4,gthread-
 #test: $(TEST_LIBS) $(TEST_OBJS)
 #	$(CXX) $(LDFLAGS) $(TEST_OBJS) $(TEST_LIBS) -o test
 
-all: mapsoft_convert mapsoft_googleview1 mapsoft_imgview mapsoft_imgview1 mapsoft_mapview mapsoft_mkmap mapsoft_mapcnv
+all: mapsoft_convert mapsoft_googleview1 mapsoft_imgview mapsoft_imgview1 mapsoft_mapview mapsoft_mkmap mapsoft_mapcnv mapsoft_ref
 
 clean:
 	rm mapsoft_googleview mapsoft_imgview mapsoft_imgview1 mapsoft_convert *.o
 
 MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a  ../jeeps/jeeps.a 
 
-mapsoft_convert: $(MAPSOFT_LIBS) mapsoft_convert.o 
-	g++ mapsoft_convert.o $(MAPSOFT_LIBS) $(USB_FLAGS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
+mapsoft_convert: $(MAPSOFT_LIBS) mapsoft_convert.cpp
+	g++ mapsoft_convert.cpp $(CPPFLAGS) $(MAPSOFT_LIBS) $(USB_FLAGS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
 
-mapsoft_mkmap: $(MAPSOFT_LIBS) mapsoft_mkmap.o
-	g++ mapsoft_mkmap.o $(MAPSOFT_LIBS) $(USB_FLAGS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
+mapsoft_ref: $(MAPSOFT_LIBS) mapsoft_ref.cpp
+	g++ mapsoft_ref.cpp $(CPPFLAGS) $(MAPSOFT_LIBS) $(USB_FLAGS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
 
-mapsoft_googleview1: $(MAPSOFT_LIBS) mapsoft_googleview1.o
-	g++  mapsoft_googleview1.o $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) $(GOOGLE_FLAGS) -o $@ 
+mapsoft_mkmap: $(MAPSOFT_LIBS) mapsoft_mkmap.cpp
+	g++ mapsoft_mkmap.cpp $(CPPFLAGS) $(MAPSOFT_LIBS) $(USB_FLAGS) $(GRLIB_FLAGS) $(LDFLAGS)  -o $@ 
 
-mapsoft_mapview: $(MAPSOFT_LIBS) mapsoft_mapview.o ../layers/layer_geomap.h ../layers/layer_geodata.h
-	g++  mapsoft_mapview.o  $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+mapsoft_googleview1: $(MAPSOFT_LIBS) mapsoft_googleview1.cpp
+	g++  mapsoft_googleview1.cpp $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) $(GOOGLE_FLAGS) -o $@ 
 
-mapsoft_mapcnv: $(MAPSOFT_LIBS) mapsoft_mapcnv.o ../layers/layer_geomap.h
-	g++  mapsoft_mapcnv.o  $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+mapsoft_mapview: $(MAPSOFT_LIBS) mapsoft_mapview.cpp ../layers/layer_geomap.h ../layers/layer_geodata.h
+	g++  mapsoft_mapview.cpp  $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+
+mapsoft_mapcnv: $(MAPSOFT_LIBS) mapsoft_mapcnv.cpp ../layers/layer_geomap.h
+	g++  mapsoft_mapcnv.cpp  $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
 
 mapsoft_imgview: $(MAPSOFT_LIBS) mapsoft_imgview.o
-	g++ mapsoft_imgview.o $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+	g++ mapsoft_imgview.o $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
 
 mapsoft_imgview1: $(MAPSOFT_LIBS) mapsoft_imgview1.o
-	g++ mapsoft_imgview1.o $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+	g++ mapsoft_imgview1.o $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
 
 mapsoft_srtmview: $(MAPSOFT_LIBS) mapsoft_srtmview.o
-	g++ mapsoft_srtmview.o $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
+	g++ mapsoft_srtmview.o $(CPPFLAGS) $(MAPSOFT_LIBS) $(GRAPH_FLAGS) $(USB_FLAGS) -o $@ 
