*** empty log message ***

--- a/vector/Makefile
+++ b/vector/Makefile
@@ -4,10 +4,12 @@ MAPSOFT_LIBS = ../geo_io/io.a ../loaders/loaders.a ../utils/mapsoft_utils.a  ../
 CPPFLAGS = -O1
 
 
-all:  test_geofig mp2fig fig2mp fig_conv_podm fig_conv_hreb fig_norm
+all:  test_geofig mp2fig fig2mp fig_conv_podm fig_conv_hreb fig_norm test_poly
 
 test_fig: $(MAPSOFT_LIBS) test_fig.cpp
 	g++ test_fig.cpp $(MAPSOFT_LIBS) -o test_fig
+test_poly: $(MAPSOFT_LIBS) test_poly.cpp
+	g++ test_poly.cpp $(MAPSOFT_LIBS) -o test_poly
 test_mp: $(MAPSOFT_LIBS) test_mp.cpp
 	g++ test_mp.cpp $(MAPSOFT_LIBS) -o test_mp
 
