--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 le = env.Copy()
-mapsoft_libs = Split ("geo_io loaders utils jeeps")
+mapsoft_libs = Split ("geo_io loaders utils jeeps viewer")
 
 le.Prepend(LIBS=mapsoft_libs)
 
