--- a/programs/SConscript
+++ b/programs/SConscript
@@ -11,6 +11,10 @@ le.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
 le.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 le.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
+le.Program('mapsoft_getks', 'mapsoft_getks.cpp')
+le.Program('mapsoft_getks_ll', 'mapsoft_getks_ll.cpp')
+
+le.Program('mapsoft_getgoogle', 'mapsoft_getgoogle.cpp')
 le.Program('mapsoft_mapview', 'mapsoft_mapview.cpp')
 le.Program('mapsoft_mkmap', 'mapsoft_mkmap.cpp')
 le.Program('mapsoft_ref', 'mapsoft_ref.cpp')
