--- a/vector/SConscript
+++ b/vector/SConscript
@@ -5,7 +5,7 @@ graph_libs = Split("jpeg tiff png")
 io_libs = Split("gd usb")
 
 le.Program('test_fig', 'test_fig.cpp', LIBS=mapsoft_libs)
-le.Program('test_poly', 'test_poly.cpp', LIBS=mapsoft_libs)
+# le.Program('test_poly', 'test_poly.cpp', LIBS=mapsoft_libs)
 le.Program('test_mp', 'test_mp.cpp', LIBS=mapsoft_libs)
 le.Program('fig_conv_podm', 'fig_conv_podm.cpp', LIBS=mapsoft_libs)
 le.Program('fig_norm', 'fig_norm.cpp', LIBS=mapsoft_libs)
@@ -13,4 +13,5 @@ le.Program('fig_bbx_test', 'fig_bbx_test.cpp', LIBS=mapsoft_libs)
 le.Program('test_geofig', 'test_geofig.cpp', LIBS = mapsoft_libs + graph_libs)
 le.Program('mp2fig', 'mp2fig.cpp', LIBS = mapsoft_libs + graph_libs)
 le.Program('add_per_to_fig', 'add_per_to_fig.cpp', LIBS = mapsoft_libs + graph_libs + io_libs)
+le.Program('fig_maptune', 'fig_maptune.cpp', LIBS = mapsoft_libs + graph_libs + io_libs)
 
