--- a/znaki/SConscript
+++ b/znaki/SConscript
@@ -4,5 +4,5 @@ le = env.Copy()
 mapsoft_libs = Split ("geo_io loaders utils jeeps")
 le.Prepend(LIBS=mapsoft_libs)
 
-le.Program('mapconv', 'mapconv.cpp')
-le.Program('mapinfo', 'mapinfo.cpp')
+le.Program('mapconv',  'mapconv.cpp')  
+le.Program('auto_gen', 'auto_gen.cpp') 
