*** empty log message ***

--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -1,3 +1,5 @@
+all: make_map_gk update_map
+
 CPPFLAGS=-I../
 make_map_gk: ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff ../utils/libutils.a
 update_map: ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff ../utils/libutils.a zn.cpp
