--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -1,37 +1,42 @@
 -
   name: триангуляционный знак
-  desc: пока использую, как более крупную отметка высоты, м.б. надо ввести отдельный знак
+  desc: .
   mp:   POI 0x0F00 0 0
-  fig:  2 1 0 4 24 7 57 -1 20 0.000 1 1 -1 0 0 1  
-  txt:  4 0 24 55 -1 18 8 0.0000 4
+  fig:  2 1 0 3 0 7 57 -1 20 0.000 1 1 -1 0 0 1  
+  txt:  4 0 0 55 -1 18 8 0.0000 4
 -
   name: отметка высоты
-  desc: 
+  desc: .
   mp:   POI 0x1100 0 0
-  fig:  2 1 0 3  24 7  57 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 24 55 -1 18 6 0.0000 4
+  fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 55 -1 18 6 0.0000 4
 -
   name: отметка уреза воды
+  desc: .
   mp:   POI 0x1000 0 0
   fig:  2 1 0 4  1 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 1 55 -1 18 6 0.0000 4
 -
   name: подпись лесного квартала, урочища
+  desc: .
   mp:   POI 0x2800 0 0
   fig:  4 1 12 55 -1 3 8 0.0000 4                 
 -
   name: памятник
+  desc: .
   mp:   POI 0x2c04 0 0
   fig:  2 1 0 1  4 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/pam.fig
   txt:  4 0 0 55 -1 3 8 0.0000 4
 -
   name: церковь
+  desc: .
   mp:   POI 0x2C0B 0 0
   fig:  2 1 0 1 11 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/cerkov.fig
 -
   name: остановка автобуса
+  desc: .
   mp:   POI 0x2F08 0 0
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/avt.fig
@@ -43,61 +48,74 @@
   txt:  4 0 0 55 -1 3 8 0.0000 4
 -
   name: перевал н/к
+  desc: .
   mp:   POI 0x6406 0 0
   fig:  2 1 0 1 23 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 55 -1 18 8 0.0000 4
 -
   name: перевал 1А-1Б
+  desc: .
   mp:   POI 0x6615 0 0
   fig:  2 1 0 1 22 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 55 -1 18 8 0.0000 4
 -
   name: перевал 1Б-..
+  desc: .
   mp:   POI 0x6614 0 0
   fig:  2 1 0 1 21 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 55 -1 18 8 0.0000 4
 -
   name: кладбище
+  desc: .
   mp:   POI 0x6403 0 1
   fig:  2 1 0 1 12 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/kladb.fig
 -
   name: башня
+  desc: .
   mp:   POI 0x6411 0 0
   fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: родник
+  desc: .
   mp:   POI 0x6414 0 0
   fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: дом
+  desc: .
   mp:   POI 0x6415 0 1
   fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 55 -1 3 8 0.0000 4
 -
   name: водопад
+  desc: .
   mp:   POI 0x6508 0 0
   fig:  2 1 0 4 17 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 55 -1 3 8 0.0000 4
 -
   name: порог
+  desc: .
   mp:   POI 0x650E 0 0
   fig:  2 1 0 4  8 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 55 -1 3 8 0.0000 4
 -
   name: яма
+  desc: .
   mp:   POI 0x6603 0 0
   fig:  2 1 0 1 25 7 157 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: охотничья вышка, кормушка и т.п.
+  desc: .
   mp:   POI 0x6606 0 0
   fig:  2 1 0 1  6 7 157 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: курган
+  desc: .
   mp:   POI 0x6613 0 0
   fig:  2 1 0 1 26 7 157 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: скала-останец
+  desc: .
   mp:   POI 0x6616 0 0
   fig:  2 1 0 1 20 7 157 -1 -1 0.000 0 1 -1 0 0 1
 -
@@ -132,13 +150,13 @@
   name: водоемы
   desc: 
   mp:   POLYGON 0x29 0 1
-  fig:  2 3 0 1 22046463  11  85 -1 20 0.000 0 0 -1 0 0 0
+  fig:  2 3 0 1 22046463  3  85 -1 20 0.000 0 0 -1 0 0 0
   txt:  4 1 1 55 -1 3 8 0.0000 4
 -
   name: крупные водоемы
   desc: 
   mp:   POLYGON 0x3B 0 2
-  fig:  2 3 0 1 22046463  11  85 -1 15 0.000 0 0 -1 0 0 0
+  fig:  2 3 0 1 22046463  3  85 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 1 1 55 -1 3 8 0.0000 4
 -
   name: дачи, сад.уч., д/о, п/л
@@ -172,8 +190,8 @@
   name: ледник
   desc: 
   mp:   POLYGON 0x4D 0 1
-  fig:  2 3 0 0 11  7  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 1 55 -1 3 8 0.0000 4
+  fig:  2 3 0 0 22046463  7  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 55 -1 3 8 0.0000 4
 -
   name: поле
   desc: 
@@ -249,13 +267,7 @@
   name: хребет
   desc: 
   mp:   POLYLINE 0x0C 0 1
-  fig:  2 1 0 2 26 7 89 -1 -1 0.000 1 1 0 0 0 0
--
-  name: пересыхающий ручей
-  desc: 
-  mp:   POLYLINE 0x26 0 0
-  fig:  2 1 1 1 22046463 7 86 -1 -1 4.000 1 1 0 0 0 0
-  txt:  4 0 1 55 -1 3 8 0.0000 4
+  fig:  2 1 0 2 24 7 89 -1 -1 0.000 1 1 0 0 0 0
 -
   name: река-1
   desc: 
@@ -313,17 +325,17 @@
   name: пунктирная горизонталь
   desc: 
   mp:   POLYLINE 0x20 0 0
-  fig:  2 1 1 1 30453904 7 90 -1 -1 4.000 1 1 0 0 0 0
+  fig:  2 1 1 1 26 7 90 -1 -1 4.000 1 1 0 0 0 0
 -
   name: горизонтали, бергштрихи и штрихи обрывов
   desc: 
   mp:   POLYLINE 0x21 0 0
-  fig:  2 1 0 1 30453904 7 90 -1 -1 0.000 1 1 0 0 0 0
+  fig:  2 1 0 1 26 7 90 -1 -1 0.000 1 1 0 0 0 0
 -
   name: жирная горизонталь
   desc: 
   mp:   POLYLINE 0x22 0 0
-  fig:  2 1 0 2 30453904 7 90 -1 -1 0.000 1 1 0 0 0 0
+  fig:  2 1 0 2 26 7 90 -1 -1 0.000 1 1 0 0 0 0
 -
   name: контур леса
   desc: 
@@ -339,6 +351,12 @@
   desc: 
   mp:   POLYLINE 0x25 0 0
   fig:  2 1 0 2 25 7 89 -1 -1 0.000 1 1 0 0 0 0
+-
+  name: пересыхающий ручей
+  desc: 
+  mp:   POLYLINE 0x26 0 0
+  fig:  2 1 1 1 22046463 7 86 -1 -1 4.000 1 1 0 0 0 0
+  txt:  4 0 1 55 -1 3 8 0.0000 4
 -
   name: железная дорога
   desc: 
