--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -3,6 +3,7 @@
   desc: .
   mp:   POI 0x0F00 0 0
   fig:  2 1 0 3 0 7 57 -1 20 0.000 1 1 -1 0 0 1  
+  pic:  pics/trig.fig
   txt:  4 0 0 55 -1 18 8 0.0000 4
 -
   name: отметка высоты
@@ -75,6 +76,7 @@
   desc: .
   mp:   POI 0x6411 0 0
   fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  pic:  pics/bash.fig
 -
   name: родник
   desc: .
@@ -103,21 +105,28 @@
   desc: .
   mp:   POI 0x6603 0 0
   fig:  2 1 0 1 25 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  pic:  pics/yama.fig
+  txt:  4 0 26 55 -1 3 8 0.0000 4
 -
   name: охотничья вышка, кормушка и т.п.
   desc: .
   mp:   POI 0x6606 0 0
   fig:  2 1 0 1  6 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  pic:  pics/ohotn.fig
 -
   name: курган
   desc: .
   mp:   POI 0x6613 0 0
   fig:  2 1 0 1 26 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  pic:  pics/pupyr.fig
+  txt:  4 0 26 55 -1 3 8 0.0000 4
 -
   name: скала-останец
   desc: .
   mp:   POI 0x6616 0 0
   fig:  2 1 0 1 20 7 157 -1 -1 0.000 0 1 -1 0 0 1
+  pic:  pics/skala.fig
+  txt:  4 0 0 55 -1 3 8 0.0000 4
 -
   name: закрытые территории
   desc: 
