*** empty log message ***

--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -336,7 +336,7 @@
   mp:   POLYLINE 0x20 0 0
   fig:  2 1 1 1 26 7 90 -1 -1 4.000 1 1 0 0 0 0
 -
-  name: горизонтали, бергштрихи и штрихи обрывов
+  name: горизонтали, бергштрихи
   desc: 
   mp:   POLYLINE 0x21 0 0
   fig:  2 1 0 1 26 7 90 -1 -1 0.000 1 1 0 0 0 0
